# Minecraft

./: .gitignore  CMakeLists.txt  Jenkinsfile  PROJECT_SUMMARY.md  QUICK_START.md  README.md  build.bat  build.sh  check_libraries.bat  clean.bat  clean.sh  dependencies.md  rebuild_debug.bat  run.bat  run.sh  setup_assets.bat
assets/shaders/: fragment.glsl  vertex.glsl
assets/textures/: README.md
docs/: Jenkins.md
script/: installer.nsi  lisence_english.rtf
src/: CMakeLists.txt  main.cpp
src/Core/: GameConfig.cpp  GameConfig.h  Input.cpp  Input.h  Inventory.cpp  Inventory.h  Player.cpp  Player.h  Time.cpp  Time.h
src/Physics/: AABB.h  CollisionSystem.cpp  CollisionSystem.h
src/Render/: Camera.cpp  Camera.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/Resource/Shader/: basic.vert
src/UI/: GameWidget.cpp  GameWidget.h
src/World/: Block.cpp  Block.h  BlockRandom.h  Chunk.cpp  Chunk.h  ChunkMeshBuilder.cpp  ChunkMeshBuilder.h  Raycast.cpp  Raycast.h  World.cpp  World.h  WorldGeneration.cpp  WorldGeneration.h
src/core/: Engine.cpp  Engine.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
src/graphics/: Lighting.cpp  Lighting.h  Mesh.cpp  Mesh.h  OpenGL.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h  TextureManager.cpp  TextureManager.h  UI.cpp  UI.h
src/player/: Camera.cpp  Camera.h  Input.cpp  Input.h  Player.cpp  Player.h
src/utils/: Logger.cpp  Logger.h
src/utils/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp  imstb_truetype.h
src/utils/imguizmo/: ImGuizmo.cpp  ImGuizmo.h
src/world/: Block.cpp  Block.h  Chunk.cpp  Chunk.h  World.cpp  World.h  WorldGenerator.cpp  WorldGenerator.h
test/: CMakeLists.txt
test/base_test/: CMakeLists.txt  main.cpp
test/machine_config_tool/: CMakeLists.txt  main.cpp
test/path_test/: CMakeLists.txt  main.cpp
test/storge_test/: CMakeLists.txt  main.cpp
test/topic_test/: CMakeLists.txt  main.cpp
